--- a/QO/Isomeria/IsomeriaGeometrica.org
+++ b/QO/Isomeria/IsomeriaGeometrica.org
@@ -24,6 +24,67 @@
 #+CAPTION: /trans/ grupos de lados opostos.  /cis/-1,2-dicloro-eteno
 [[./Trans.png]]
 
+
+
+* Isomeria dos  Compostos cíclicos
+** Compostos cíclicos
+
+
+#+begin_export latex
+\schemestart
+\chemname{\chemfig{@{a1}H_3C@{a2}>[:330,,2](<:[:225]H)-(<[:30,,,1]@{a3}CH_3@{a4})(<:[:315]H)-[:240](%
+-[:120])}}{{\itshape cis}-1,2-dimetilcicloprano} 
+\schemestop
+\chemmove{
+\node[inner sep=2pt,fill=red,fill opacity=0.2, fit=(a1) (a2)]{};
+\node[inner sep=2pt,fill=red,fill opacity=0.2, fit=(a3) (a4)]{};
+}
+\hspace{2cm}
+#+end_export
+
+
+#+begin_export latex
+\schemestart
+\chemname{\chemfig{@{a1}H_3C@{a2}>[:330,,2](<:[:225]H)-(<[:30]H)(<:[:315,,,1]@{a3}CH_3@{a4})-[:240](%
+-[:120])}}{{\itshape trans}-1,2-dimetilcicloprano}
+\schemestop
+\chemmove{
+    \node[inner sep=2pt,fill=red,fill opacity=0.2, fit=(a1) (a2)]{};
+    \node[inner sep=2pt,fill=red,fill opacity=0.2, fit=(a3) (a4)]{};
+}
+#+end_export
+
+
+#+begin_export latex
+\wedgehasheddash
+\cyclohexanev{2B==OH;3A==OH}
+\cyclohexanev{2SA==H;2SB==OH;3SA==OH;3SB==H}
+\cyclohexanev{2SA==H;2SB==OH;3Sd==OH;3Su==H}
+#+end_export
+
+
+** Alquenos Dissubstituídos
+
+-  Os termos /cis/ e /trans/ são usados apenas para alcenos *dissubstituídos*.
+
+#+begin_export latex
+\begin{center}
+\small
+\schemestart
+\chemname{\chemfig{H_3C-[:-60]C(-[:-120]H)=C(-[:-60]H)-[:60]CH_3}}{\bfseries{\itshape cis}-but-2-eno}
+\qquad
+\chemname{\chemfig{H-[:-60]C(-[:-120]H_3C)=C(-[:-60]H)-[:60]CH_3}}{\bfseries{\itshape trans}-but-2-eno}
+\qquad
+\chemname{\chemfig{H_3CCH_2-[:-60,,3]C(-[:-120]H)=C(-[:-60]H)-[:60]CH_3}}{\bfseries{\itshape cis}-pent-2-eno}
+\qquad
+\chemname{\chemfig{H-[:-60]C(-[:-120]H_3C)=C(-[:-60]H)-[:60]CH_2CH_3}}{\bfseries{\itshape trans}-pent-2-eno}
+\schemestop
+\end{center}
+#+end_export
+
+
+
+
 ** Exemplos
 
 #+begin_question
@@ -57,7 +118,7 @@ Como é possível observar, as ligações duplas presentes nos átomos de carbon
 ** 
 #+ATTR_LATEX: :options [print=true]
 #+begin_answer
-\scriptsize{
+#+LATEX: \scriptsize{
 Analisando as duas insaturações das moléculas, observa-se que os ligantes não mostrados são átomos de hidrogênio. Em ambas as insaturações, os átomos de hidrogênio estão do mesmo lado da ligação dupla, logo estão em posição *cis*.
 
 #+begin_export latex
@@ -65,12 +126,12 @@ Analisando as duas insaturações das moléculas, observa-se que os ligantes nã
 -[:210]-[:150](-[:90]H)=[:210](-[:150]H)-[:270]-[:210](-[:270]H)=[:150](%
 -[:210]H)-[:90]-[:150]-[:90]-[:150]-[:90]}
 #+end_export
-}
+#+LATEX:}
 #+end_answer
 
 
 
-
+* Regra de Cahn–Ingold–Prelog
 **  Prefixos E e Z
 :PROPERTIES:
 :BEAMER_opt: allowframebreaks
@@ -110,4 +171,94 @@ I > Br > \ch{C$\ell$} > S > F > O > N > C > H
 - Se os grupos de maior prioridade em cada carbono estiverem do mesmo lado de um plano imaginário passando por esses carbonos, a geometria dessa dupla ligação será designada pela letra Z (do alemão /Zusammen/, *“juntos”*).
 - Se os grupos de maior prioridade em cada carbono estiverem em lados opostos da dupla ligação, a geometria da ligação será designada pela letra E (do alemão /Entgegen/, *“opostos”*).
 
+\framebreak
+
+
+#+begin_export latex
+\begin{center}
+\schemestart                                           
+\chemfig{@{a1}C{\ell}@{a2}-[:-60,1]C(-[:-120]@{a4}F)=C(-[:-60]@{a5}H)-[:60]@{a3}Br}
+\schemestop
+\end{center}
+#+end_export
+
+- Os átomos ligados ao *C1* são Cl (prioridade 1) e F (prioridade 2) e os ligados ao *C2*, Br (prioridade 1) e H (prioridade 2). Grupos de maior prioridade ligados do mesmo lado da dupla.
+
+#+begin_export latex
+\vspace{.4cm}
+\begin{center}
+\schemestart                                           
+\chemname[4ex]{\chemfig{@{a1}C{\ell}@{a2}-[:-60,1]C(-[:-120]@{a4}F)=C(-[:-60]@{a5}H)-[:60]@{a3}Br}}{\textcolor{red}{(Z )-2-bromo-1-cloro-1-fluoroeteno}}
+\schemestop
+\chemmove{
+\node[circle, draw, inner sep=2pt,above=.2cm of a1] (label) {1};
+\node[circle, draw, inner sep=2pt,above=.2cm of a3] (label) {1};
+\node[circle, draw, inner sep=2pt,below=.2cm of a4] (label) {2};
+\node[circle, draw, inner sep=2pt,below=.2cm of a5] (label) {2};
+}
+\end{center}
+#+end_export
+
+
+\framebreak
+
+
+#+begin_export latex
+\begin{center}
+\schemestart                                           
+\chemname[6ex]{\chemfig{@{a1}H_3C@{a2}-[:-60,1]C(-[:-120]@{a4}H)=C(-[:-60]@{a5}H)-[:60]@{a3}CH_3}}{\bfseries {\itshape Z}-but-2-eno} \qquad \qquad  \qquad 
+\chemname[6ex]{\chemfig{@{a7}H_3C@{a7}-[:-60,1]C(-[:-120]@{a8}H)=C(-[:-60]@{a9}CH_3)-[:60]@{a10}H}}{\bfseries {\itshape E}-but-2-eno}
+\schemestop
+\chemmove{
+\node[circle, draw, inner sep=2pt,above=.2cm of a1] (label) {1};
+\node[circle, draw, inner sep=2pt,above=.2cm of a3] (label) {1};
+\node[circle, draw, inner sep=2pt,below=.2cm of a4] (label) {2};
+\node[circle, draw, inner sep=2pt,below=.2cm of a5] (label) {2};
+%%%%% MOLECULA 2
+\node[circle, draw, inner sep=2pt,above=.33cm of a7] (label) {1};
+\node[circle, draw, inner sep=2pt,above=.33cm of a10] (label) {2};
+\node[circle, draw, inner sep=2pt,below=.3cm of a8] (label) {2};
+\node[circle, draw, inner sep=2pt,below=.3cm of a9] (label) {1};
+}
+
+\end{center}
+
+#+end_export
+
+
+\framebreak
+
+#+ATTR_LATEX: :scale 0.22
+[[./org_ez.png]]
+
+* Isomeria Geométrica com Heteroátomos
+
+** Isomeria Geométrica com Heteroátomos
+
+
+- Algumas funções que contém ligados a carbono sp^2, como as oximas e iminas, possuem geometria definida já que o giro em torno da ligação $\pi$ possui energia em geral proibitiva. Esses compostos podem ser nomeados seguindo o sistema (*E*)-(*Z*) como utilizado em alcenos.
+
+[[./org_ez_hetero.png]]
+
+
+
+
+
+
+
+** Fim da Aula
+
+
+
+#+begin_export latex
+\begin{tikzpicture}
+\node[graduate,sword, minimum size=1cm]{ \bfseries Bons Estudos !!!!};
+\end{tikzpicture}
+\begin{center}
+\begin{tabular}{ccc}
+Download Aula  \\%& & Lista de Exercícios \\
+ \qrcode[height=2in]{https://github.com/fabinholima/AulaQuimicaPDF/blob/main/QO/Isomeria/Isomeria_Geometrica.pdf} \\  %& & \qrcode[height=2in]{https://mark.nl.tab.digital/s/6kSsDYwW4icCK9X}\\
+ \end{tabular}
+ \end{center}
+#+end_export
 
